fixed readme.md for readability + update app.css with responsive

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -222,11 +222,79 @@ input::placeholder{
         font-size: 2.4rem;
     }
 }
+@media (min-width: 360px){
+    .modal{
+        padding-top: 270px;
+    }
+    .modal-content{
+        width: 75%;
+    }
+    h1{
+        font-size: 34px;
+    }
+    .high-score{
+        font-size: 2.4rem;
+    }
+}
+@media (min-width: 375px){
+    .modal{
+        padding-top: 265px;
+    }
+    .modal-content{
+        width: 75%;
+    }
+    h1{
+        font-size: 34px;
+    }
+    .high-score{
+        font-size: 2.4rem;
+    }
+}
+@media (min-width: 390px){
+    .modal{
+        padding-top: 270px;
+    }
+    .modal-content{
+        width: 75%;
+    }
+    h1{
+        font-size: 34px;
+    }
+    .high-score{
+        font-size: 2.4rem;
+    }
+}
+@media (min-width: 412px){
+    .modal{
+        padding-top: 275px;
+    }
+    .modal-content{
+        width: 75%;
+    }
+    h1{
+        font-size: 34px;
+    }
+    .high-score{
+        font-size: 2.4rem;
+    }
+}
+@media (min-width: 540px){
+    .modal{
+        padding-top: 275px;
+    }
+    .modal-content{
+        width: 40%;
+    }
+    h1{
+        font-size: 3rem;
+    }
+    .high-score{
+        font-size: 2.4rem;
+    }
+}
 @media (min-width: 568px){
     .modal{
-        padding-top: 325px;
-        margin: 0;
-        padding: 0;
+        padding-top: 275px;
     }
     .modal-content{
         width: 40%;
@@ -240,9 +308,35 @@ input::placeholder{
 }
 @media (min-width: 768px){
     .modal{
-        padding-top: 325px;
-        margin: 0;
-        padding: 0;
+        padding-top: 270px;
+    }
+    .modal-content{
+        width: 30%;
+    }
+    h1{
+        font-size: 3rem;
+    }
+    .high-score{
+        font-size: 2.4rem;
+    }
+}
+@media (min-width: 820px){
+    .modal{
+        padding-top: 275px;
+    }
+    .modal-content{
+        width: 30%;
+    }
+    h1{
+        font-size: 3rem;
+    }
+    .high-score{
+        font-size: 2.4rem;
+    }
+}
+@media (min-width: 912px){
+    .modal{
+        padding-top: 270px;
     }
     .modal-content{
         width: 30%;
@@ -256,8 +350,7 @@ input::placeholder{
 }
 @media (min-width: 1024px){
     .modal{
-        padding-top: 325px;
-        width: 130%;
+        padding-top: 275px;
     }
     h1{
         font-size: 3rem;
@@ -266,9 +359,9 @@ input::placeholder{
         font-size: 2.4rem;
     }
 }
-@media (min-width: 1920px){
+@media (min-width: 1620px){
     .modal{
-        width: 100%;
+        padding-top: 275px;
     }
     .modal-content{
         width: 20%;
@@ -277,7 +370,7 @@ input::placeholder{
 @media (min-width: 2560px){
     .modal{
         width: 100%;
-        padding-top: 480px;
+        padding-top: 275px;
     }
     .modal-content{
         width: 20%;
